--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -55,7 +55,7 @@ text-align: justify}
 
 #Introduction
 
-Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in specialization *bp: what do you mean by that? speciation?* events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013], such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
+Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in speciation  events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013;@payseur_genomic_2016;@harrison_hybridization_2014]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
 <!-- [could be expanded, e.g. referring to other systems where people look at admixture] -->
 <!-- speciation and hibridazation review [@abbott_hybridization_2013] -->
 <!-- chimp bonobo admixture [@manuel_chimpanzee_2016] -->
@@ -65,14 +65,18 @@ present, but then you need to give a comprehensive introduction, not just a very
 incomplete list of papers. The alternative is to simply refer to a bunch of
 relevant reviews*
 
+<!-- , such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. -->
+
 ##Admixture on the genomic level and basic idea how to date it
 On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, miotic recombination progressively breaks these introgressed segments down [@falush_inference_2003, @baird_etheridge_barton_2003]. 
 Assuming that recombination events occur according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, whose parameter is informative about the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009; @gravel_population_2012].
-In particular, under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event*[@gravel2012, @liang_nielsen2014]* .  Hence, the length distribution of introgressed chromosomal segments ('recombination clock') can be used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019]  *add hellenthal 2014 science*
+In particular, under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event [@gravel2012, @liang_nielsen2014] .  Hence, the length distribution of introgressed chromosomal segments ('recombination clock') can be used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019,@hellenthal_genetic_2014]  
+<!-- *add hellenthal 2014 science* -->
 <!-- [add more papers].  -->
 
 *Maybe introduce here the term of admixture pulse*
-To do this, the model usually assumes a one generation long admixture event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombine with each other to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate does not change over time [@gravel_population_2012].
+
+To do this, the model usually assumes an admixture pulse, where admixture between two populations is a one generation long event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombine with each other to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate map is identical across populations and does not change over time [@gravel_population_2012].
 <!-- Introduce model assumptions here -->
 <!-- constant recombination rate -->
 <!-- same ancestor -->
@@ -88,9 +92,12 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics of introgressed haplotypes, such as LD patterns and density of derived variants, to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating by fitting an exponential distribution to it.
 
 ##Dates of archaic introgression obtained so far
-*This paragraph is in quite good shape, but I think it is worth highlighting how
-the approaches used differ, and why accuracy was increased over time*
-Both approaches have been used to estimate the time of admixture between Neandertals and modern humans.  Using XXX, Sankararaman et al dated the neandertal-human admixture time to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012]. Later, this data was refined to 40,510–54,454 ya (95% CI) [@moorjani_genetic_2016] *explain why these dates are better estimated*. using modern day genomes and 50,000 to 60,000 ya using an ancient genome [@fu_genome_2014]. An additional contemporaneous *contemporaneous to what?* admixture event between Neandertals and East-Asian populations was suggested to explain the higher amount of Neandertal ancestry in present-day East Asians [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 ya using modern day genomes [@sankararaman_combined_2016] *using what technique?*. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovan, one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019].
+<!-- *This paragraph is in quite good shape, but I think it is worth highlighting how -->
+<!-- the approaches used differ, and why accuracy was increased over time* -->
+
+Both approaches have been used to estimate the time of admixture between Neandertals and modern humans.  Using the decay of introgressed Neandetlas variants in modern day genomes, Sankararaman et al dated the neandertal-human admixture time to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012]. Later, this data was refined to 40,510–54,454 ya (95% CI) using a differnt ascerteinment scheme combined with a differnt genetic map [@moorjani_genetic_2016]. A date was also obtained from an ancient genome to be 50,000 to 60,000 ya by adding the admixture date of the ancient individual, obteined by the decay of pairwise covariance between introgressed SNPs, to the speciments radiocarbon date [@fu_genome_2014]. 
+
+An additional admixture event between Neandertals and East-Asian populations at the same time as the admixture between Neandertals and all non-Africans was suggested to explain the higher amount of Neandertal ancestry in present-day East Asians [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 ya using the ALD approache on modern day genomes [@sankararaman_combined_2016]. An additional Denisovan admixture event was suggested for East-Asian populations by directly identifying Denisovan haplotype segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovan, one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019].
 
 <!-- [I would move the intro paragraph ] -->
 
@@ -99,6 +106,7 @@ Both approaches have been used to estimate the time of admixture between Neander
 
 *this should be at the end of the intro*
 ##What we want to do
+
 While good estimates for the mean admixture time between Neandertals and modern humans
 exist, little is known about the duration of the event. In particular, dates
 when admixture ended are of crucial importance, as they are relevant to 
@@ -109,7 +117,8 @@ pulses cannot be distinguished from more continuous admixture events,
 and so current methods are unsuitable to definitively answer when the contact between 
 Neandertals and modern humans ended. 
 
-*this should go in the discussion*Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
+*this should go in the discussion*
+Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
 
 
 ##Assumptions on the data
@@ -118,25 +127,25 @@ Both approaches, the direct measure of the segment length and the indirect ALD b
 
 ### Segments are is independent and identically exponentially distributed
 First, it is assumed that the lengths of the introgressed segments are independent 
-and identically exponentially distributed. This means that the number of ancestors
-per admixed individual is identical, such that the proportion of 
-introgressed segments is equal among the individuals*Is this true? Reference?*. 
-One restriction this puts on the data is that segments of the same ancestor are 
-assumed to recombine into longer segments. This assumption is violated in particular 
-when admixture is very old $(t \approx 2N)$ or very recent $t \approx \log(2N)$ (Liang and Nielsen 2014). 
-*in this paragraph, you repeated yourself a lot. Try to be concise and present
-your argument in one logical sequence whenever possible*
+and identically exponentially distributed. One restriction this puts on the data is that segments of the same ancestor are 
+assumed not to recombine into longer segments. This assumption is violated in particular 
+when admixture is very old $(t \approx 2N)$ or very recent $t \approx \log(2N)$ [@liang_lengths_2014].
+
+<!-- Tract ength can be correlated due to the variance in migrant ancestors an individual has and due to inbreeding bringing together migrant joining together migrant tracts -->
+
+<!-- *in this paragraph, you repeated yourself a lot. Try to be concise and present -->
+<!-- your argument in one logical sequence whenever possible* -->
 
 ### Recombination Map
 Second, it is assumed that the recombination rates are known. Since the recombination 
 is used as a clock, misspecification of the recombinationn map will lead to over/or 
 underestimates of tract lengths, and admixture times. Crucially, even if the
 length estimation is unbiased, the admixture time estimates can be substantially
-biased *recap what Priya/Sriram
-found about the bias/correction*. 
+biased 
+*recap what Priya/Sriram found about the bias/correction*. 
 
-Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[add refs]. 
-Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008; @kong_fine-scale_2010], searching for admixture tracts breakpoints [@hinch_landscape_2011; @wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
+Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[@coop_high-resolution_2008; @kong_fine-scale_2010;@hinch_landscape_2011; @wegmann_recombination_2011;@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
+They either focuse on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008; @kong_fine-scale_2010], searching for admixture tracts breakpoints [@hinch_landscape_2011; @wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
 Different genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010; @hinch_landscape_2011]. The average length of Neandertal introgressed segments is approximately 50 kb [@sankararaman_date_2012], and so fine-scale recombination maps are essential. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as a pedigree based map to estimate the error in the map [@sankararaman_date_2012; @fu_genome_2014; @sankararaman_combined_2016].
 
 ### Demography
@@ -173,8 +182,8 @@ segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene fl
 ### Methodological bias through ascertainment 
 An additional bias might be introduced in the ALD based dating method since it requires 
 ascertaining the SNPs for admixture informative sites, especially for archaic 
-admixture [@sankararaman_date_2012; @fu_genome_2014]. *explain briefly why this
-is necessary, and how exactly this is done*
+admixture [@sankararaman_date_2012; @fu_genome_2014]. 
+*explain briefly why this is necessary, and how exactly this is done*
 The problem here is that  introgressed variants from the ancestral archaic 
 population are ascertained using only a few sequenced archaic individuals as 
 proxies for the actual introgressing archaic population. These individuals are 
