--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -56,25 +56,19 @@ text-align: justify}
 #Introduction
 
 Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in speciation  events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013;@payseur_genomic_2016;@harrison_hybridization_2014]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
-<!-- [could be expanded, e.g. referring to other systems where people look at admixture] -->
-<!-- speciation and hibridazation review [@abbott_hybridization_2013] -->
-<!-- chimp bonobo admixture [@manuel_chimpanzee_2016] -->
 
-*bp:this feels very thin. It's OK to motivate admixture as something that is widely
-present, but then you need to give a comprehensive introduction, not just a very
-incomplete list of papers. The alternative is to simply refer to a bunch of
-relevant reviews*
 
-<!-- , such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. -->
+*bp 19/02:this feels very thin. It's OK to motivate admixture as something that is widely present, but then you need to give a comprehensive introduction, not just a very incomplete list of papers. The alternative is to simply refer to a bunch of relevant reviews*
+
+*li 27/02:I refere now to some hybridization reviews which point out to alot of admixture papers in different species*
 
 ##Admixture on the genomic level and basic idea how to date it
 On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, miotic recombination progressively breaks these introgressed segments down [@falush_inference_2003, @baird_etheridge_barton_2003]. 
 Assuming that recombination events occur according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, whose parameter is informative about the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009; @gravel_population_2012].
 In particular, under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event [@gravel2012, @liang_nielsen2014] .  Hence, the length distribution of introgressed chromosomal segments ('recombination clock') can be used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019,@hellenthal_genetic_2014]  
-<!-- *add hellenthal 2014 science* -->
-<!-- [add more papers].  -->
+*bp 19/02:add hellenthal 2014 science*
 
-*Maybe introduce here the term of admixture pulse*
+*bp 19/02: Maybe introduce here the term of admixture pulse*
 
 To do this, the model usually assumes an admixture pulse, where admixture between two populations is a one generation long event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombine with each other to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate map is identical across populations and does not change over time [@gravel_population_2012].
 <!-- Introduce model assumptions here -->
@@ -92,8 +86,10 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics of introgressed haplotypes, such as LD patterns and density of derived variants, to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating by fitting an exponential distribution to it.
 
 ##Dates of archaic introgression obtained so far
-<!-- *This paragraph is in quite good shape, but I think it is worth highlighting how -->
-<!-- the approaches used differ, and why accuracy was increased over time* -->
+
+*bp 19/02: This paragraph is in quite good shape, but I think it is worth highlighting how the approaches used differ, and why accuracy was increased over time*
+
+*li 27/02: Included how they differ but it goes into quit detail already especially the differences in Pryas method compared to Siriams where she uses a slightly differnt ascerteinment scheme (the one I am also testing) pluse the DECODE map for the corection of the genetic map*
 
 Both approaches have been used to estimate the time of admixture between Neandertals and modern humans.  Using the decay of introgressed Neandetlas variants in modern day genomes, Sankararaman et al dated the neandertal-human admixture time to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012]. Later, this data was refined to 40,510–54,454 ya (95% CI) using a differnt ascerteinment scheme combined with a differnt genetic map [@moorjani_genetic_2016]. A date was also obtained from an ancient genome to be 50,000 to 60,000 ya by adding the admixture date of the ancient individual, obteined by the decay of pairwise covariance between introgressed SNPs, to the speciments radiocarbon date [@fu_genome_2014]. 
 
@@ -104,7 +100,8 @@ An additional admixture event between Neandertals and East-Asian populations at 
 <!-- What does admixture pulse mean? is it distingushable from a continuous admixtuer? -->
 <!-- the time of the last GF is relevant for Neandertal extinction, hence the extrema of the distribition more important then mean time -->
 
-*this should be at the end of the intro*
+*bp 19/02: this should be at the end of the intro*
+
 ##What we want to do
 
 While good estimates for the mean admixture time between Neandertals and modern humans
@@ -117,7 +114,8 @@ pulses cannot be distinguished from more continuous admixture events,
 and so current methods are unsuitable to definitively answer when the contact between 
 Neandertals and modern humans ended. 
 
-*this should go in the discussion*
+*bp 19/02: this should go in the discussion*
+
 Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
 
 
@@ -131,10 +129,9 @@ and identically exponentially distributed. One restriction this puts on the data
 assumed not to recombine into longer segments. This assumption is violated in particular 
 when admixture is very old $(t \approx 2N)$ or very recent $t \approx \log(2N)$ [@liang_lengths_2014].
 
-<!-- Tract ength can be correlated due to the variance in migrant ancestors an individual has and due to inbreeding bringing together migrant joining together migrant tracts -->
+*li 27/02: from liang_lengths_2014: Tract length can be correlated due to the variance in migrant ancestors an individual has and due to inbreeding joining together migrant tracts which violates the iid assumption especially in the cases mentioned*
 
-<!-- *in this paragraph, you repeated yourself a lot. Try to be concise and present -->
-<!-- your argument in one logical sequence whenever possible* -->
+*bp 19/02: in this paragraph, you repeated yourself a lot. Try to be concise and present your argument in one logical sequence whenever possible* 
 
 ### Recombination Map
 Second, it is assumed that the recombination rates are known. Since the recombination 
@@ -142,22 +139,21 @@ is used as a clock, misspecification of the recombinationn map will lead to over
 underestimates of tract lengths, and admixture times. Crucially, even if the
 length estimation is unbiased, the admixture time estimates can be substantially
 biased 
-*recap what Priya/Sriram found about the bias/correction*. 
+
+*bp 19/02:recap what Priya/Sriram found about the bias/correction*
+
+*li 27/02: now I first explain what is the problem with genetic maps are and then how it affects the estimate according to Siriam (Prya quotes him on this) and then what is the problem with the correction*
 
 Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[@coop_high-resolution_2008; @kong_fine-scale_2010;@hinch_landscape_2011; @wegmann_recombination_2011;@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
 They either focuse on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008; @kong_fine-scale_2010], searching for admixture tracts breakpoints [@hinch_landscape_2011; @wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
 Different genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010; @hinch_landscape_2011]. The average length of Neandertal introgressed segments is approximately 50 kb [@sankararaman_date_2012], and so fine-scale recombination maps are essential. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as a pedigree based map to estimate the error in the map [@sankararaman_date_2012; @fu_genome_2014; @sankararaman_combined_2016].
 
 ### Demography
-*this section (and frequently your writing in general) could need more structure. 
-One simple approach is the _context-content-conclusion_ system (
-https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005619)
-For this intro section, the basic idea is that for each paragraph you need to 
-make clear that you start by*
+*bp 19/02:this section (and frequently your writing in general) could need more structure. One simple approach is the _context-content-conclusion_ system For this intro section, the basic idea is that for each paragraph you need to make clear that you start by*
 
-1. explaining why we're interested in demography, 
-2. what precisely the issue is
-3. explain what you're gonna do about it
+*1. explaining why we're interested in demography,* 
+*2. what precisely the issue is*
+*3. explain what you're gonna do about it*
 
 
 A third assumption is that the demographic history of the studied population is
@@ -183,13 +179,16 @@ segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene fl
 An additional bias might be introduced in the ALD based dating method since it requires 
 ascertaining the SNPs for admixture informative sites, especially for archaic 
 admixture [@sankararaman_date_2012; @fu_genome_2014]. 
-*explain briefly why this is necessary, and how exactly this is done*
+
+*bp 19/02: explain briefly why this is necessary, and how exactly this is done*
+
 The problem here is that  introgressed variants from the ancestral archaic 
 population are ascertained using only a few sequenced archaic individuals as 
 proxies for the actual introgressing archaic population. These individuals are 
 potentially only distantly related to the introgressing population, which might 
 result in missing introgressed variants. 
-<!-- What to cite for the last sentence?? -->
+
+*li 27/02 What to cite for the last sentence?*
 
 ### The Pulse Assumption
 Finally, the admixture is assumed to happened in only a single generation [@moorjani_history_2011]. This single pulse is mathematically convenient since all the introgressed segments entering 
@@ -197,7 +196,10 @@ in this single generation can be modeled using a single exponential distribution
 This however limits the information gained form the dating since in case of a 
 multi-generation long admixture the single-pulse model results in a mean admixture 
 time between start end end of the gene flow. Ideally one would like to obtain 
-the start and end, hence the duration of admixture between Neandertals and non-African populations. *preceeding section could be merged with last intro paragraph*
+the start and end, hence the duration of admixture between Neandertals and non-African populations. 
+
+*bp 19/02: preceeding section could be merged with last intro paragraph*
+
 If admixture is happening over $n$ generations, this results in a mixture of $n$ 
 different exponential distribution, one for the segments entered in each generation 
 [@pickrell_ancient_2014].  Previous studies tried to model this, using the ALD, 
